overflow error fix

--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@ footer{
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Тень с эффектом размытия */
     margin-top: 20px; /* Отступ сверху */
     align-self: center; /* Центрировать слайдер по горизонтали относительно родителя */
+    overflow: hidden;
     opacity: 1;
 }
   
@@ -689,11 +690,11 @@ button.next {
     }
 
     .skills-slider {
-        width: 100%; /* Для мобильных устройств занимает всю ширину */
-        height: 70vh; /* Высота автоматически адаптируется под контент */
-        padding: 10px; /* Меньший отступ */
+        width: 80%; /* Для мобильных устройств занимает всю ширину */
+        padding: 0; /* Меньший отступ */
         margin-top: 0; /* Убираем верхний отступ для мобильных */
         margin-bottom: 0; /* Убираем нижний отступ для мобильных */
+        overflow: hidden;
     }
   
     .skill {
